removed unnecessary getCreatorPage endpoint
